<resources>
    <!-- global -->
    <string name="app_name">I am fine</string>
    <string name="network_error">Network Error</string>
    <string name="something_went_wrong">Something went wrong</string>

    <!-- sign in -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="email_not_found">That email is not registered</string>
    <string name="wrong_password">That password is incorrect</string>
    <string name="continue_with_facebook">Continue with Facebook</string>


    <!-- sign up -->
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="invalid_mail">Invalid Email</string>
    <string name="invalid_user_name">Invalid User Name</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="email_already_exits">A user with e-mail already exists</string>
    <string name="or">OR</string>

    <!-- main screen -->
    <string name="search_users">Search</string>
    <string name="asked_about_you">Askd about you</string>
    <string name="ask_if_fine">Ask \"How are you ?\"</string>
    <string name="was_fine_when">Was fine %1$s</string>
    <string name="could_not_ask">An error has occured, Couldn\'t ask about that user</string>
    <string name="asked_about_user">Asked about user successfuly</string>
    <string name="your_friends_asked_about_you">Your friends asked about you!</string>
    <string name="i_am_fine">I am fine</string>
    <string name="sign_out">Sign Out</string>

    <!-- search users -->
    <string name="search_by_name">Search for friends by name</string>
    <string name="asked_x">asked %1$s</string>
    <string name="asked_about_x">You asked about %1$s</string>

    <!-- users asked about you -->
    <string name="told_them_you_are_fine">Now they know that you are fine</string>
    <string name="tell_them_you_are_fine">Tell Them you are fine</string>

    <!-- notifications -->
    <string name="someone_asked_about_you">Someone asked about you</string>
    <string name="x_asked_about_you">%1$s asked about you</string>
    <string name="someone_you_asked_about_is_fine">Someone you asked about is fine</string>
    <string name="x_said_i_am_fine">%1$s said "I am fine"</string>

    <!-- constants -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- ids -->
    <string name="facebook_app_id">155526598309408</string>
    <string name="fb_login_protocol_scheme">fb155526598309408</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
