<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enterprises.wayne.iamfine.authentication.sign_in.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">


                <EditText
                    android:id="@+id/edit_text_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawableTint="@color/gray"
                    android:hint="@string/email" />

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/gray"
                    android:hint="@string/password" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/new_user_sign_up" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView>