<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".screen.sign_in.SignInFragment">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">


                <EditText
                    android:id="@+id/edit_text_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawableTint="@color/gray"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@+id/edit_text_user_name" />


                <EditText
                    android:id="@id/edit_text_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_profile"
                    android:drawableTint="@color/gray"
                    android:focusable="true"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/edit_text_password"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/gray"
                    android:focusable="true"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:nextFocusForward="@+id/button_sign_in"
                    android:inputType="textPassword"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button_sign_up"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>